--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 body {
     font-family: 'Poppins', sans-serif;
-    background-color: #1d1d1d; /* Dark grey background */
+    background-color: Black; /* Dark grey background */
     color: #fff; /* White text */
     display: flex;
     flex-direction: column;
